# GravitySimulator

./: CMakeLists.txt  Makefile.mak  README.md  main.cpp
include/: CelestialBody.hpp  GravitySimulator.hpp  Scenarios.hpp  Vec2.hpp
src/: CelestialBody.cpp  GravitySimulator.cpp  Scenarios.cpp  main.cpp
